openshift-project2-bluegreen/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-apps
  labels:
    app: demo-app
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      version: blue
  template:
    metadata:
      labels:
        app: demo-app
        version: blue
    spec:
      containers:
      -  name: app
         image: nginx:1.21
         ports:
         - containerPort: 80
