openshift-project2-bluegreen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo-app
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
